CompiladorDLP/bin/sintactico/y.output
   0  $accept : programa $end

   1  programa : elementos

   2  elementos :
   3            | elementos elemento

   4  elemento : funcion
   5           | struct
   6           | atributo

   7  funcion : "IDENT" '(' parametrosOpt ')' ':' tipo '{' atributos sentencias '}'
   8          | "IDENT" '(' parametrosOpt ')' '{' atributos sentencias '}'

   9  atributos :
  10            | atributos atributo

  11  parametrosOpt : parametros
  12                |

  13  parametros : "IDENT" ':' tipo
  14             | parametros ',' "IDENT" ':' tipo

  15  tipo : "IDENT"
  16       | "INT"
  17       | "REAL"
  18       | "CHAR"
  19       | '[' "LITERALINT" ']' tipo

  20  struct : "STRUCT" "IDENT" '{' definiciones '}' ';'

  21  atributo : "VAR" definicion

  22  definiciones :
  23               | definiciones definicion

  24  definicion : "IDENT" ':' tipo ';'

  25  sentencias : sentencias sentencia
  26             |

  27  sentencia : "READ" expresion ';'
  28            | "PRINT" expresion ';'
  29            | "WHILE" '(' expresion ')' '{' sentencias '}'
  30            | "IF" '(' expresion ')' '{' sentencias '}'
  31            | "IF" '(' expresion ')' '{' sentencias '}' "ELSE" '{' sentencias '}'
  32            | expresion '=' expresion ';'
  33            | "RETURN" expresion ';'
  34            | "RETURN" ';'
  35            | "IDENT" '(' valoresOpt ')' ';'

  36  expresion : "LITERALINT"
  37            | "LITERALREAL"
  38            | "LITERALCHAR"
  39            | "IDENT"
  40            | expresion '+' expresion
  41            | expresion '-' expresion
  42            | expresion '/' expresion
  43            | expresion '*' expresion
  44            | expresion '<' expresion
  45            | expresion '>' expresion
  46            | expresion "MENORIGUAL" expresion
  47            | expresion "MAYORIGUAL" expresion
  48            | expresion "IGUAL" expresion
  49            | expresion "DISTINTO" expresion
  50            | expresion "AND" expresion
  51            | expresion "OR" expresion
  52            | '!' expresion
  53            | "CAST" '<' tipo '>' '(' expresion ')'
  54            | '(' expresion ')'
  55            | expresion '[' expresion ']'
  56            | expresion '.' "IDENT"
  57            | "IDENT" '(' valoresOpt ')'

  58  valoresOpt : valores
  59             |

  60  valores : expresion
  61          | valores ',' expresion

state 0
	$accept : . programa $end  (0)
	elementos : .  (2)

	.  reduce 2

	programa  goto 1
	elementos  goto 2


state 1
	$accept : programa . $end  (0)

	$end  accept


state 2
	programa : elementos .  (1)
	elementos : elementos . elemento  (3)

	"IDENT"  shift 3
	"STRUCT"  shift 4
	"VAR"  shift 5
	$end  reduce 1

	elemento  goto 6
	funcion  goto 7
	struct  goto 8
	atributo  goto 9


state 3
	funcion : "IDENT" . '(' parametrosOpt ')' ':' tipo '{' atributos sentencias '}'  (7)
	funcion : "IDENT" . '(' parametrosOpt ')' '{' atributos sentencias '}'  (8)

	'('  shift 10
	.  error


state 4
	struct : "STRUCT" . "IDENT" '{' definiciones '}' ';'  (20)

	"IDENT"  shift 11
	.  error


state 5
	atributo : "VAR" . definicion  (21)

	"IDENT"  shift 12
	.  error

	definicion  goto 13


state 6
	elementos : elementos elemento .  (3)

	.  reduce 3


state 7
	elemento : funcion .  (4)

	.  reduce 4


state 8
	elemento : struct .  (5)

	.  reduce 5


state 9
	elemento : atributo .  (6)

	.  reduce 6


state 10
	funcion : "IDENT" '(' . parametrosOpt ')' ':' tipo '{' atributos sentencias '}'  (7)
	funcion : "IDENT" '(' . parametrosOpt ')' '{' atributos sentencias '}'  (8)
	parametrosOpt : .  (12)

	"IDENT"  shift 14
	')'  reduce 12

	parametrosOpt  goto 15
	parametros  goto 16


state 11
	struct : "STRUCT" "IDENT" . '{' definiciones '}' ';'  (20)

	'{'  shift 17
	.  error


state 12
	definicion : "IDENT" . ':' tipo ';'  (24)

	':'  shift 18
	.  error


state 13
	atributo : "VAR" definicion .  (21)

	.  reduce 21


state 14
	parametros : "IDENT" . ':' tipo  (13)

	':'  shift 19
	.  error


state 15
	funcion : "IDENT" '(' parametrosOpt . ')' ':' tipo '{' atributos sentencias '}'  (7)
	funcion : "IDENT" '(' parametrosOpt . ')' '{' atributos sentencias '}'  (8)

	')'  shift 20
	.  error


state 16
	parametrosOpt : parametros .  (11)
	parametros : parametros . ',' "IDENT" ':' tipo  (14)

	','  shift 21
	')'  reduce 11


state 17
	struct : "STRUCT" "IDENT" '{' . definiciones '}' ';'  (20)
	definiciones : .  (22)

	.  reduce 22

	definiciones  goto 22


state 18
	definicion : "IDENT" ':' . tipo ';'  (24)

	'['  shift 23
	"IDENT"  shift 24
	"INT"  shift 25
	"REAL"  shift 26
	"CHAR"  shift 27
	.  error

	tipo  goto 28


state 19
	parametros : "IDENT" ':' . tipo  (13)

	'['  shift 23
	"IDENT"  shift 24
	"INT"  shift 25
	"REAL"  shift 26
	"CHAR"  shift 27
	.  error

	tipo  goto 29


state 20
	funcion : "IDENT" '(' parametrosOpt ')' . ':' tipo '{' atributos sentencias '}'  (7)
	funcion : "IDENT" '(' parametrosOpt ')' . '{' atributos sentencias '}'  (8)

	':'  shift 30
	'{'  shift 31
	.  error


state 21
	parametros : parametros ',' . "IDENT" ':' tipo  (14)

	"IDENT"  shift 32
	.  error


state 22
	struct : "STRUCT" "IDENT" '{' definiciones . '}' ';'  (20)
	definiciones : definiciones . definicion  (23)

	"IDENT"  shift 12
	'}'  shift 33
	.  error

	definicion  goto 34


state 23
	tipo : '[' . "LITERALINT" ']' tipo  (19)

	"LITERALINT"  shift 35
	.  error


state 24
	tipo : "IDENT" .  (15)

	.  reduce 15


state 25
	tipo : "INT" .  (16)

	.  reduce 16


state 26
	tipo : "REAL" .  (17)

	.  reduce 17


state 27
	tipo : "CHAR" .  (18)

	.  reduce 18


state 28
	definicion : "IDENT" ':' tipo . ';'  (24)

	';'  shift 36
	.  error


state 29
	parametros : "IDENT" ':' tipo .  (13)

	.  reduce 13


state 30
	funcion : "IDENT" '(' parametrosOpt ')' ':' . tipo '{' atributos sentencias '}'  (7)

	'['  shift 23
	"IDENT"  shift 24
	"INT"  shift 25
	"REAL"  shift 26
	"CHAR"  shift 27
	.  error

	tipo  goto 37


state 31
	funcion : "IDENT" '(' parametrosOpt ')' '{' . atributos sentencias '}'  (8)
	atributos : .  (9)

	.  reduce 9

	atributos  goto 38


state 32
	parametros : parametros ',' "IDENT" . ':' tipo  (14)

	':'  shift 39
	.  error


state 33
	struct : "STRUCT" "IDENT" '{' definiciones '}' . ';'  (20)

	';'  shift 40
	.  error


state 34
	definiciones : definiciones definicion .  (23)

	.  reduce 23


state 35
	tipo : '[' "LITERALINT" . ']' tipo  (19)

	']'  shift 41
	.  error


state 36
	definicion : "IDENT" ':' tipo ';' .  (24)

	.  reduce 24


state 37
	funcion : "IDENT" '(' parametrosOpt ')' ':' tipo . '{' atributos sentencias '}'  (7)

	'{'  shift 42
	.  error


state 38
	funcion : "IDENT" '(' parametrosOpt ')' '{' atributos . sentencias '}'  (8)
	atributos : atributos . atributo  (10)
	sentencias : .  (26)

	"VAR"  shift 5
	'!'  reduce 26
	"IDENT"  reduce 26
	'('  reduce 26
	'}'  reduce 26
	"LITERALINT"  reduce 26
	"READ"  reduce 26
	"PRINT"  reduce 26
	"WHILE"  reduce 26
	"IF"  reduce 26
	"RETURN"  reduce 26
	"LITERALREAL"  reduce 26
	"LITERALCHAR"  reduce 26
	"CAST"  reduce 26

	atributo  goto 43
	sentencias  goto 44


state 39
	parametros : parametros ',' "IDENT" ':' . tipo  (14)

	'['  shift 23
	"IDENT"  shift 24
	"INT"  shift 25
	"REAL"  shift 26
	"CHAR"  shift 27
	.  error

	tipo  goto 45


state 40
	struct : "STRUCT" "IDENT" '{' definiciones '}' ';' .  (20)

	.  reduce 20


state 41
	tipo : '[' "LITERALINT" ']' . tipo  (19)

	'['  shift 23
	"IDENT"  shift 24
	"INT"  shift 25
	"REAL"  shift 26
	"CHAR"  shift 27
	.  error

	tipo  goto 46


state 42
	funcion : "IDENT" '(' parametrosOpt ')' ':' tipo '{' . atributos sentencias '}'  (7)
	atributos : .  (9)

	.  reduce 9

	atributos  goto 47


state 43
	atributos : atributos atributo .  (10)

	.  reduce 10


state 44
	funcion : "IDENT" '(' parametrosOpt ')' '{' atributos sentencias . '}'  (8)
	sentencias : sentencias . sentencia  (25)

	'!'  shift 48
	"IDENT"  shift 49
	'('  shift 50
	'}'  shift 51
	"LITERALINT"  shift 52
	"READ"  shift 53
	"PRINT"  shift 54
	"WHILE"  shift 55
	"IF"  shift 56
	"RETURN"  shift 57
	"LITERALREAL"  shift 58
	"LITERALCHAR"  shift 59
	"CAST"  shift 60
	.  error

	sentencia  goto 61
	expresion  goto 62


state 45
	parametros : parametros ',' "IDENT" ':' tipo .  (14)

	.  reduce 14


state 46
	tipo : '[' "LITERALINT" ']' tipo .  (19)

	.  reduce 19


state 47
	funcion : "IDENT" '(' parametrosOpt ')' ':' tipo '{' atributos . sentencias '}'  (7)
	atributos : atributos . atributo  (10)
	sentencias : .  (26)

	"VAR"  shift 5
	'!'  reduce 26
	"IDENT"  reduce 26
	'('  reduce 26
	'}'  reduce 26
	"LITERALINT"  reduce 26
	"READ"  reduce 26
	"PRINT"  reduce 26
	"WHILE"  reduce 26
	"IF"  reduce 26
	"RETURN"  reduce 26
	"LITERALREAL"  reduce 26
	"LITERALCHAR"  reduce 26
	"CAST"  reduce 26

	atributo  goto 43
	sentencias  goto 63


state 48
	expresion : '!' . expresion  (52)

	'!'  shift 48
	"IDENT"  shift 64
	'('  shift 50
	"LITERALINT"  shift 52
	"LITERALREAL"  shift 58
	"LITERALCHAR"  shift 59
	"CAST"  shift 60
	.  error

	expresion  goto 65


state 49
	sentencia : "IDENT" . '(' valoresOpt ')' ';'  (35)
	expresion : "IDENT" .  (39)
	expresion : "IDENT" . '(' valoresOpt ')'  (57)

	'('  shift 66
	'+'  reduce 39
	'-'  reduce 39
	'*'  reduce 39
	'/'  reduce 39
	'<'  reduce 39
	'>'  reduce 39
	'['  reduce 39
	'.'  reduce 39
	"MENORIGUAL"  reduce 39
	"MAYORIGUAL"  reduce 39
	"IGUAL"  reduce 39
	"DISTINTO"  reduce 39
	"AND"  reduce 39
	"OR"  reduce 39
	'='  reduce 39


state 50
	expresion : '(' . expresion ')'  (54)

	'!'  shift 48
	"IDENT"  shift 64
	'('  shift 50
	"LITERALINT"  shift 52
	"LITERALREAL"  shift 58
	"LITERALCHAR"  shift 59
	"CAST"  shift 60
	.  error

	expresion  goto 67


state 51
	funcion : "IDENT" '(' parametrosOpt ')' '{' atributos sentencias '}' .  (8)

	.  reduce 8


state 52
	expresion : "LITERALINT" .  (36)

	.  reduce 36


state 53
	sentencia : "READ" . expresion ';'  (27)

	'!'  shift 48
	"IDENT"  shift 64
	'('  shift 50
	"LITERALINT"  shift 52
	"LITERALREAL"  shift 58
	"LITERALCHAR"  shift 59
	"CAST"  shift 60
	.  error

	expresion  goto 68


state 54
	sentencia : "PRINT" . expresion ';'  (28)

	'!'  shift 48
	"IDENT"  shift 64
	'('  shift 50
	"LITERALINT"  shift 52
	"LITERALREAL"  shift 58
	"LITERALCHAR"  shift 59
	"CAST"  shift 60
	.  error

	expresion  goto 69


state 55
	sentencia : "WHILE" . '(' expresion ')' '{' sentencias '}'  (29)

	'('  shift 70
	.  error


state 56
	sentencia : "IF" . '(' expresion ')' '{' sentencias '}'  (30)
	sentencia : "IF" . '(' expresion ')' '{' sentencias '}' "ELSE" '{' sentencias '}'  (31)

	'('  shift 71
	.  error


state 57
	sentencia : "RETURN" . expresion ';'  (33)
	sentencia : "RETURN" . ';'  (34)

	'!'  shift 48
	"IDENT"  shift 64
	'('  shift 50
	"LITERALINT"  shift 52
	';'  shift 72
	"LITERALREAL"  shift 58
	"LITERALCHAR"  shift 59
	"CAST"  shift 60
	.  error

	expresion  goto 73


state 58
	expresion : "LITERALREAL" .  (37)

	.  reduce 37


state 59
	expresion : "LITERALCHAR" .  (38)

	.  reduce 38


state 60
	expresion : "CAST" . '<' tipo '>' '(' expresion ')'  (53)

	'<'  shift 74
	.  error


state 61
	sentencias : sentencias sentencia .  (25)

	.  reduce 25


state 62
	sentencia : expresion . '=' expresion ';'  (32)
	expresion : expresion . '+' expresion  (40)
	expresion : expresion . '-' expresion  (41)
	expresion : expresion . '/' expresion  (42)
	expresion : expresion . '*' expresion  (43)
	expresion : expresion . '<' expresion  (44)
	expresion : expresion . '>' expresion  (45)
	expresion : expresion . "MENORIGUAL" expresion  (46)
	expresion : expresion . "MAYORIGUAL" expresion  (47)
	expresion : expresion . "IGUAL" expresion  (48)
	expresion : expresion . "DISTINTO" expresion  (49)
	expresion : expresion . "AND" expresion  (50)
	expresion : expresion . "OR" expresion  (51)
	expresion : expresion . '[' expresion ']'  (55)
	expresion : expresion . '.' "IDENT"  (56)

	'+'  shift 75
	'-'  shift 76
	'*'  shift 77
	'/'  shift 78
	'<'  shift 79
	'>'  shift 80
	'['  shift 81
	'.'  shift 82
	"MENORIGUAL"  shift 83
	"MAYORIGUAL"  shift 84
	"IGUAL"  shift 85
	"DISTINTO"  shift 86
	"AND"  shift 87
	"OR"  shift 88
	'='  shift 89
	.  error


state 63
	funcion : "IDENT" '(' parametrosOpt ')' ':' tipo '{' atributos sentencias . '}'  (7)
	sentencias : sentencias . sentencia  (25)

	'!'  shift 48
	"IDENT"  shift 49
	'('  shift 50
	'}'  shift 90
	"LITERALINT"  shift 52
	"READ"  shift 53
	"PRINT"  shift 54
	"WHILE"  shift 55
	"IF"  shift 56
	"RETURN"  shift 57
	"LITERALREAL"  shift 58
	"LITERALCHAR"  shift 59
	"CAST"  shift 60
	.  error

	sentencia  goto 61
	expresion  goto 62


state 64
	expresion : "IDENT" .  (39)
	expresion : "IDENT" . '(' valoresOpt ')'  (57)

	'('  shift 91
	'+'  reduce 39
	'-'  reduce 39
	'*'  reduce 39
	'/'  reduce 39
	','  reduce 39
	'<'  reduce 39
	'>'  reduce 39
	'['  reduce 39
	'.'  reduce 39
	"MENORIGUAL"  reduce 39
	"MAYORIGUAL"  reduce 39
	"IGUAL"  reduce 39
	"DISTINTO"  reduce 39
	"AND"  reduce 39
	"OR"  reduce 39
	')'  reduce 39
	']'  reduce 39
	';'  reduce 39
	'='  reduce 39


state 65
	expresion : expresion . '+' expresion  (40)
	expresion : expresion . '-' expresion  (41)
	expresion : expresion . '/' expresion  (42)
	expresion : expresion . '*' expresion  (43)
	expresion : expresion . '<' expresion  (44)
	expresion : expresion . '>' expresion  (45)
	expresion : expresion . "MENORIGUAL" expresion  (46)
	expresion : expresion . "MAYORIGUAL" expresion  (47)
	expresion : expresion . "IGUAL" expresion  (48)
	expresion : expresion . "DISTINTO" expresion  (49)
	expresion : expresion . "AND" expresion  (50)
	expresion : expresion . "OR" expresion  (51)
	expresion : '!' expresion .  (52)
	expresion : expresion . '[' expresion ']'  (55)
	expresion : expresion . '.' "IDENT"  (56)

	.  reduce 52


state 66
	sentencia : "IDENT" '(' . valoresOpt ')' ';'  (35)
	expresion : "IDENT" '(' . valoresOpt ')'  (57)
	valoresOpt : .  (59)

	'!'  shift 48
	"IDENT"  shift 64
	'('  shift 50
	"LITERALINT"  shift 52
	"LITERALREAL"  shift 58
	"LITERALCHAR"  shift 59
	"CAST"  shift 60
	')'  reduce 59

	expresion  goto 92
	valoresOpt  goto 93
	valores  goto 94


state 67
	expresion : expresion . '+' expresion  (40)
	expresion : expresion . '-' expresion  (41)
	expresion : expresion . '/' expresion  (42)
	expresion : expresion . '*' expresion  (43)
	expresion : expresion . '<' expresion  (44)
	expresion : expresion . '>' expresion  (45)
	expresion : expresion . "MENORIGUAL" expresion  (46)
	expresion : expresion . "MAYORIGUAL" expresion  (47)
	expresion : expresion . "IGUAL" expresion  (48)
	expresion : expresion . "DISTINTO" expresion  (49)
	expresion : expresion . "AND" expresion  (50)
	expresion : expresion . "OR" expresion  (51)
	expresion : '(' expresion . ')'  (54)
	expresion : expresion . '[' expresion ']'  (55)
	expresion : expresion . '.' "IDENT"  (56)

	'+'  shift 75
	'-'  shift 76
	'*'  shift 77
	'/'  shift 78
	'<'  shift 79
	'>'  shift 80
	'['  shift 81
	'.'  shift 82
	"MENORIGUAL"  shift 83
	"MAYORIGUAL"  shift 84
	"IGUAL"  shift 85
	"DISTINTO"  shift 86
	"AND"  shift 87
	"OR"  shift 88
	')'  shift 95
	.  error


state 68
	sentencia : "READ" expresion . ';'  (27)
	expresion : expresion . '+' expresion  (40)
	expresion : expresion . '-' expresion  (41)
	expresion : expresion . '/' expresion  (42)
	expresion : expresion . '*' expresion  (43)
	expresion : expresion . '<' expresion  (44)
	expresion : expresion . '>' expresion  (45)
	expresion : expresion . "MENORIGUAL" expresion  (46)
	expresion : expresion . "MAYORIGUAL" expresion  (47)
	expresion : expresion . "IGUAL" expresion  (48)
	expresion : expresion . "DISTINTO" expresion  (49)
	expresion : expresion . "AND" expresion  (50)
	expresion : expresion . "OR" expresion  (51)
	expresion : expresion . '[' expresion ']'  (55)
	expresion : expresion . '.' "IDENT"  (56)

	'+'  shift 75
	'-'  shift 76
	'*'  shift 77
	'/'  shift 78
	'<'  shift 79
	'>'  shift 80
	'['  shift 81
	'.'  shift 82
	"MENORIGUAL"  shift 83
	"MAYORIGUAL"  shift 84
	"IGUAL"  shift 85
	"DISTINTO"  shift 86
	"AND"  shift 87
	"OR"  shift 88
	';'  shift 96
	.  error


state 69
	sentencia : "PRINT" expresion . ';'  (28)
	expresion : expresion . '+' expresion  (40)
	expresion : expresion . '-' expresion  (41)
	expresion : expresion . '/' expresion  (42)
	expresion : expresion . '*' expresion  (43)
	expresion : expresion . '<' expresion  (44)
	expresion : expresion . '>' expresion  (45)
	expresion : expresion . "MENORIGUAL" expresion  (46)
	expresion : expresion . "MAYORIGUAL" expresion  (47)
	expresion : expresion . "IGUAL" expresion  (48)
	expresion : expresion . "DISTINTO" expresion  (49)
	expresion : expresion . "AND" expresion  (50)
	expresion : expresion . "OR" expresion  (51)
	expresion : expresion . '[' expresion ']'  (55)
	expresion : expresion . '.' "IDENT"  (56)

	'+'  shift 75
	'-'  shift 76
	'*'  shift 77
	'/'  shift 78
	'<'  shift 79
	'>'  shift 80
	'['  shift 81
	'.'  shift 82
	"MENORIGUAL"  shift 83
	"MAYORIGUAL"  shift 84
	"IGUAL"  shift 85
	"DISTINTO"  shift 86
	"AND"  shift 87
	"OR"  shift 88
	';'  shift 97
	.  error


state 70
	sentencia : "WHILE" '(' . expresion ')' '{' sentencias '}'  (29)

	'!'  shift 48
	"IDENT"  shift 64
	'('  shift 50
	"LITERALINT"  shift 52
	"LITERALREAL"  shift 58
	"LITERALCHAR"  shift 59
	"CAST"  shift 60
	.  error

	expresion  goto 98


state 71
	sentencia : "IF" '(' . expresion ')' '{' sentencias '}'  (30)
	sentencia : "IF" '(' . expresion ')' '{' sentencias '}' "ELSE" '{' sentencias '}'  (31)

	'!'  shift 48
	"IDENT"  shift 64
	'('  shift 50
	"LITERALINT"  shift 52
	"LITERALREAL"  shift 58
	"LITERALCHAR"  shift 59
	"CAST"  shift 60
	.  error

	expresion  goto 99


state 72
	sentencia : "RETURN" ';' .  (34)

	.  reduce 34


state 73
	sentencia : "RETURN" expresion . ';'  (33)
	expresion : expresion . '+' expresion  (40)
	expresion : expresion . '-' expresion  (41)
	expresion : expresion . '/' expresion  (42)
	expresion : expresion . '*' expresion  (43)
	expresion : expresion . '<' expresion  (44)
	expresion : expresion . '>' expresion  (45)
	expresion : expresion . "MENORIGUAL" expresion  (46)
	expresion : expresion . "MAYORIGUAL" expresion  (47)
	expresion : expresion . "IGUAL" expresion  (48)
	expresion : expresion . "DISTINTO" expresion  (49)
	expresion : expresion . "AND" expresion  (50)
	expresion : expresion . "OR" expresion  (51)
	expresion : expresion . '[' expresion ']'  (55)
	expresion : expresion . '.' "IDENT"  (56)

	'+'  shift 75
	'-'  shift 76
	'*'  shift 77
	'/'  shift 78
	'<'  shift 79
	'>'  shift 80
	'['  shift 81
	'.'  shift 82
	"MENORIGUAL"  shift 83
	"MAYORIGUAL"  shift 84
	"IGUAL"  shift 85
	"DISTINTO"  shift 86
	"AND"  shift 87
	"OR"  shift 88
	';'  shift 100
	.  error


state 74
	expresion : "CAST" '<' . tipo '>' '(' expresion ')'  (53)

	'['  shift 23
	"IDENT"  shift 24
	"INT"  shift 25
	"REAL"  shift 26
	"CHAR"  shift 27
	.  error

	tipo  goto 101


state 75
	expresion : expresion '+' . expresion  (40)

	'!'  shift 48
	"IDENT"  shift 64
	'('  shift 50
	"LITERALINT"  shift 52
	"LITERALREAL"  shift 58
	"LITERALCHAR"  shift 59
	"CAST"  shift 60
	.  error

	expresion  goto 102


state 76
	expresion : expresion '-' . expresion  (41)

	'!'  shift 48
	"IDENT"  shift 64
	'('  shift 50
	"LITERALINT"  shift 52
	"LITERALREAL"  shift 58
	"LITERALCHAR"  shift 59
	"CAST"  shift 60
	.  error

	expresion  goto 103


state 77
	expresion : expresion '*' . expresion  (43)

	'!'  shift 48
	"IDENT"  shift 64
	'('  shift 50
	"LITERALINT"  shift 52
	"LITERALREAL"  shift 58
	"LITERALCHAR"  shift 59
	"CAST"  shift 60
	.  error

	expresion  goto 104


state 78
	expresion : expresion '/' . expresion  (42)

	'!'  shift 48
	"IDENT"  shift 64
	'('  shift 50
	"LITERALINT"  shift 52
	"LITERALREAL"  shift 58
	"LITERALCHAR"  shift 59
	"CAST"  shift 60
	.  error

	expresion  goto 105


state 79
	expresion : expresion '<' . expresion  (44)

	'!'  shift 48
	"IDENT"  shift 64
	'('  shift 50
	"LITERALINT"  shift 52
	"LITERALREAL"  shift 58
	"LITERALCHAR"  shift 59
	"CAST"  shift 60
	.  error

	expresion  goto 106


state 80
	expresion : expresion '>' . expresion  (45)

	'!'  shift 48
	"IDENT"  shift 64
	'('  shift 50
	"LITERALINT"  shift 52
	"LITERALREAL"  shift 58
	"LITERALCHAR"  shift 59
	"CAST"  shift 60
	.  error

	expresion  goto 107


state 81
	expresion : expresion '[' . expresion ']'  (55)

	'!'  shift 48
	"IDENT"  shift 64
	'('  shift 50
	"LITERALINT"  shift 52
	"LITERALREAL"  shift 58
	"LITERALCHAR"  shift 59
	"CAST"  shift 60
	.  error

	expresion  goto 108


state 82
	expresion : expresion '.' . "IDENT"  (56)

	"IDENT"  shift 109
	.  error


state 83
	expresion : expresion "MENORIGUAL" . expresion  (46)

	'!'  shift 48
	"IDENT"  shift 64
	'('  shift 50
	"LITERALINT"  shift 52
	"LITERALREAL"  shift 58
	"LITERALCHAR"  shift 59
	"CAST"  shift 60
	.  error

	expresion  goto 110


state 84
	expresion : expresion "MAYORIGUAL" . expresion  (47)

	'!'  shift 48
	"IDENT"  shift 64
	'('  shift 50
	"LITERALINT"  shift 52
	"LITERALREAL"  shift 58
	"LITERALCHAR"  shift 59
	"CAST"  shift 60
	.  error

	expresion  goto 111


state 85
	expresion : expresion "IGUAL" . expresion  (48)

	'!'  shift 48
	"IDENT"  shift 64
	'('  shift 50
	"LITERALINT"  shift 52
	"LITERALREAL"  shift 58
	"LITERALCHAR"  shift 59
	"CAST"  shift 60
	.  error

	expresion  goto 112


state 86
	expresion : expresion "DISTINTO" . expresion  (49)

	'!'  shift 48
	"IDENT"  shift 64
	'('  shift 50
	"LITERALINT"  shift 52
	"LITERALREAL"  shift 58
	"LITERALCHAR"  shift 59
	"CAST"  shift 60
	.  error

	expresion  goto 113


state 87
	expresion : expresion "AND" . expresion  (50)

	'!'  shift 48
	"IDENT"  shift 64
	'('  shift 50
	"LITERALINT"  shift 52
	"LITERALREAL"  shift 58
	"LITERALCHAR"  shift 59
	"CAST"  shift 60
	.  error

	expresion  goto 114


state 88
	expresion : expresion "OR" . expresion  (51)
